# model-eval-platform

./: .gitignore  generate_csv.py  pyproject.toml  train_data.csv
.github/workflows/: ci.yml
api/: Dockerfile  main.py
core/: config.py  database.py  ml.py  models.py  profile.py  storage.py
docs/: B.md  C_content.md  bug_rec.md  milestone_A.md
infra/: Dockerfile.mlflow  docker-compose.yml
test/: test_health.py
worker/: Dockerfile  celery_app.py  tasks.py
